{
  "sourceLanguage" : "en",
  "strings" : {
    "customplace.button.wikipedia" : {
      "comment" : "Button to open a custom place in wikipedia",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Open in Wikipedia"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Abrir en Wikipedia"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Openen in Wikipedia"
          }
        }
      }
    },
    "customplace.latitude.placeholder" : {
      "comment" : "Placeholder text for the latitude input",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "latitude"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "latitud"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Breedtegraad"
          }
        }
      }
    },
    "customplace.longitude.placeholder" : {
      "comment" : "Placeholder text for the longitude input",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "longitude"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "longitud"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Lengtegraad"
          }
        }
      }
    },
    "customplace.name.placeholder" : {
      "comment" : "Placeholder text for the name input",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "name"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "nombre"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Naam"
          }
        }
      }
    },
    "customplace.subtitle" : {
      "comment" : "Subtitle of the Custom Place view",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enter the name, latitude and longitude of a place manually"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Escribe nombre, latitud y longitud de tu lugar"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Voer handmatig de naam, breedtegraad en lengtegraad van een plaats in"
          }
        }
      }
    },
    "customplace.title" : {
      "comment" : "Title of the Custom Place view",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Try your place"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Prueba tu lugar"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Probeer jouw plaats"
          }
        }
      }
    },
    "placelist.button.customplace" : {
      "comment" : "Button in the header to try your own place data",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "or tap here to try your own place"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "o toca aquí para probar tu propio lugar"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "of tik hier om je eigen plaats te proberen"
          }
        }
      }
    },
    "placelist.message.error" : {
      "comment" : "Message to show while loading places",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Error while fetching places"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Error al charger legates"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fout bij het ophalen van plaatsen"
          }
        }
      }
    },
    "placelist.message.loading" : {
      "comment" : "Message to show when there is an error loading",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Loading places"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cargando lugares"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Plaatsen laden"
          }
        }
      }
    },
    "placelist.place.latitude" : {
      "comment" : "Latitude word in place subtitle",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "latitude"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "latitud"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "breedtegraad"
          }
        }
      }
    },
    "placelist.place.longitude" : {
      "comment" : "Longitude word in place subtitle",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "longitude"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "longitud"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "lengtegraad"
          }
        }
      }
    },
    "placelist.subtitle" : {
      "comment" : "Longer message shown below the title in the PlaceList screen",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tap on a place below to open it in the Wikipedia app"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Toca en un lugar debajo para abrirlo en la app de Wikipedia"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tik op een plaats hieronder om deze te openen in de Wikipedia-app."
          }
        }
      }
    },
    "placelist.title" : {
      "comment" : "Title at the top of the Place List screen",
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Places"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Lugares"
          }
        },
        "nl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Plaatsen"
          }
        }
      }
    }
  },
  "version" : "1.0"
}